--- a/eileenli-website.html
+++ b/eileenli-website.html
@@ -8,9 +8,10 @@
 
    	  <p>What works faster than a calculator? A calcula-now.</p>
 
-   	  <a href="eileenli@mail.missouri.edu"><img src="https://drive.google.com/file/d/1YwEULyfDN1lsA8Zh82oqti47dj1uVN8o/view?usp=share_link"></a>
+   	  <a href="eileenli@mail.missouri.edu"><img src="IMG/Eileen-pic.jpg"></a>
 
    	  <ul>
+   	  	<h2>10 Songs Nominated for Grammy Record of the Year 2023</h2>
    	  	<li>Don't Shut Me Down</li>
    	  	<li>Easy On Me</li>
    	  	<li>BREAK MY SOUL</li>
