--- a/eileenli-website.html
+++ b/eileenli-website.html
@@ -8,10 +8,12 @@
 
    	  <p>What works faster than a calculator? A calcula-now.</p>
 
-   	  <a href="eileenli@mail.missouri.edu"><img src="IMG/Eileen-pic.jpg"></a>
+   	  <a href="eileenli@mail.missouri.edu"><img src="IMG/Eileen-pic.jpg" alt="Eileen standing"></a>
 
-   	  <ul>
    	  	<h2>10 Songs Nominated for Grammy Record of the Year 2023</h2>
+         
+         <ul>
+
    	  	<li>Don't Shut Me Down</li>
    	  	<li>Easy On Me</li>
    	  	<li>BREAK MY SOUL</li>
