--- a/7-Thai-Restaurants-in-Columbia.html
+++ b/7-Thai-Restaurants-in-Columbia.html
@@ -75,7 +75,7 @@
 						65201<br>
 						<a href="tel:+15737773108">(573) 777-3108</a>
 					</address>
-					<p><a href="https://big-mama-chims-noodle-house.business.site">It has the same owner as Chims Thai Kitchen on Broadway, and its web page is also kind of bad. It has customers' comments and gallery, but I strongly suggest they change how they put the section and leave the home page cleaner. The menu sounds good though.</p>
+					<p><a href="https://big-mama-chims-noodle-house.business.site">It has the same owner as Chims Thai Kitchen on Broadway, and its web page is also kind of bad. It has customers' comments and gallery, but I strongly suggest they change how they put the section and leave the home page cleaner. The menu sounds good though.</a></p>
 				</div>
 			</section>
 
