--- a/index.html
+++ b/index.html
@@ -11,21 +11,18 @@
         <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&family=Merriweather:ital@1&family=PT+Serif:ital,wght@0,700;1,700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
       </head>
       
-
-   	  <header>
+    <body>
 
     <a class="skip-link" href="#content">Skip to content</a>
     <nav>
       <ul>
-        <li><a class="active" href="eileenli-website.html">Home</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a href="10-Songs-Nominated-for-Grammy-Record-of-the-Year.html">10 Songs Nominated for Grammy Record of the Year</a></li>
         <li><a href="7-Thai-Restaurants-in-Columbia.html">7 Thai Restaurants in Columbia</a></li>
       </ul>
     </nav>
 
-        </header>
-
-
+    <main class="homepage">
         <div class="contact">
         <p>Eileen Li - eileenli@missouri.mail.edu</p>
         </div>
@@ -37,7 +34,7 @@
         <p>What works faster than a calculator?</p>
         <p class="jokepunchline">A Calcula-now.</p>
     </div>
-
+       </main>
 
    	</body>
     <footer>
@@ -47,7 +44,7 @@
             <a href="oldindex.html">link to unstyled site</a>
             <br>
             <a href="https://library.missouri.edu/journalism/">link outside</a>
-        <div>
+        </div>
     </footer>
 
 
