--- a/10-Songs-Nominated-for-Grammy-Record-of-the-Year.html
+++ b/10-Songs-Nominated-for-Grammy-Record-of-the-Year.html
@@ -15,7 +15,7 @@
     <a class="skip-link" href="#content">Skip to content</a>
     <nav>
       <ul>
-        <li><a href="eileenli-website.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a class="active" href="10-Songs-Nominated-for-Grammy-Record-of-the-Year.html">10 Songs Nominated for Grammy Record of the Year</a></li>
         <li><a href="7-Thai-Restaurants-in-Columbia.html">7 Thai Restaurants in Columbia</a></li>
       </ul>
