--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -90,6 +91,7 @@
       <button id="button_next">Next</button>
     </div>
 
+</m
     <footer>Eileen Li, 2023; All images for album covers come from Amazon.</footer>
   </body>
 </html>
