--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,7 @@
        The sixth photo shows the snow fort of our efforts for an hour, by which time it was darker and the sun was falling even more.
       </figcaption>
     </figure>
-
+          
      <figure class="gallery-image hideThis">
       <img src="images/7.jpg" alt="before we left.'">
       <figcaption>
@@ -91,7 +91,7 @@
       <button id="button_next">Next</button>
     </div>
 
-</m
+</main>
     <footer>Eileen Li, 2023; All images for album covers come from Amazon.</footer>
   </body>
 </html>
