--- a/gallery.html
+++ b/gallery.html
@@ -92,6 +92,8 @@
     </div>
 
 </main>
-    <footer>Eileen Li, 2023; All images for album covers come from Amazon.</footer>
+    
+    <footer>Eileen Li, 2023</footer>
+    
   </body>
 </html>
