--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
     <a class="skip-link" href="#content">Skip to content</a>
     <nav>
       <ul>
-        <li><a href="eileenwebsite.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="10-Songs-Nominated-for-Grammy-Record-of-the-Year.html">10 Songs Nominated for Grammy Record of the Year</a></li>
         <li><a href="7-Thai-Restaurants-in-Columbia.html">7 Thai Restaurants in Columbia</a></li>
         <li><a class="active" href="gallery.html">Christmas in Woodboro with Family</a></li>
