--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a class="skip-link" href="#content">Skip to content</a>
     <nav class="nav1">
       <ul>
-        <li><a class="active" href="eileenli-website.html">Home</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a href="10-Songs-Nominated-for-Grammy-Record-of-the-Year.html">10 Songs Nominated for Grammy Record of the Year</a></li>
         <li><a href="7-Thai-Restaurants-in-Columbia.html">7 Thai Restaurants in Columbia</a></li>
         <li><a href="gallery.html">Christmas in Woodboro with Family</a></li>
