--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
 
-   	  <a href="eileenli@mail.missouri.edu"><img src="img/Eileen-pic.jpg" alt="Eileen standing"></a>
+   	  <a href="eileenli@mail.missouri.edu"><img class="profile" src="img/Eileen-pic.jpg" alt="Eileen standing"></a>
 
        <div class="joke">
         <p>What works faster than a calculator?</p>
