--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
       </figcaption>
     </figure>
 
-    <figure class="gallery-image hideThis">
+    <figure class="gallery-image1 hideThis">
       <img src="images/2.jpg" alt="Eileen had snow on her hands.">
       <figcaption>
         The second photo shows me blowing the snow on my gloves. The sky was clear and bright.
@@ -50,7 +50,7 @@
       </figcaption>
     </figure>
 
-    <figure class="gallery-image hideThis">
+    <figure class="gallery-image1 hideThis">
       <img src="images/4.jpg" alt="My host family playing with snow.">
       <figcaption>
         This photo shows the members of my host family. Closest to the picture are my host sister and brother, and you can also see the snow fort that we were building.
@@ -71,7 +71,7 @@
       </figcaption>
     </figure>
           
-     <figure class="gallery-image hideThis">
+     <figure class="gallery-image1 hideThis">
       <img src="images/7.jpg" alt="before we left.'">
       <figcaption>
         The seventh photo was taken before we left the lake, I was standing at about the same place as the second photo. You can clearly see how much the sky has changed.
