--- a/gallery.html
+++ b/gallery.html
@@ -57,7 +57,7 @@
       </figcaption>
     </figure>
 
-    <figure class="gallery-image hideThis">
+    <figure class="gallery-image1 hideThis">
       <img src="images/5.jpg" alt="sky changing.'">
       <figcaption>
         This photo shows the sky after a while. By this time the sky had turned pinkish-purple and become darker.
